// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`include option should match snapshot for a single RegExp value included1: assets 1`] = `
Object {
  "entry.css": "body {
  color: red;
}
a {
  color: blue;
}
",
  "included1.css": "a{text-align:center}",
  "included2.css": "body {
  color: red;
}
body {
  color: red;
  font-size: 20px;
}
a {
  color: blue;
}

",
}
`;

exports[`include option should match snapshot for a single RegExp value included1: errors 1`] = `Array []`;

exports[`include option should match snapshot for a single RegExp value included1: warnings 1`] = `Array []`;

exports[`include option should match snapshot for a single String value included1: assets 1`] = `
Object {
  "entry.css": "body {
  color: red;
}
a {
  color: blue;
}
",
  "included1.css": "a{text-align:center}",
  "included2.css": "body {
  color: red;
}
body {
  color: red;
  font-size: 20px;
}
a {
  color: blue;
}

",
}
`;

exports[`include option should match snapshot for a single String value included1: errors 1`] = `Array []`;

exports[`include option should match snapshot for a single String value included1: warnings 1`] = `Array []`;

exports[`include option should match snapshot for multiple RegExp values included1 and included2: assets 1`] = `
Object {
  "entry.css": "body {
  color: red;
}
a {
  color: blue;
}
",
  "included1.css": "a{text-align:center}",
  "included2.css": "body{color:red;font-size:20px}a{color:blue}",
}
`;

exports[`include option should match snapshot for multiple RegExp values included1 and included2: errors 1`] = `Array []`;

exports[`include option should match snapshot for multiple RegExp values included1 and included2: warnings 1`] = `Array []`;

exports[`include option should match snapshot for multiple String values included1 and included2: assets 1`] = `
Object {
  "entry.css": "body {
  color: red;
}
a {
  color: blue;
}
",
  "included1.css": "a{text-align:center}",
  "included2.css": "body{color:red;font-size:20px}a{color:blue}",
}
`;

exports[`include option should match snapshot for multiple String values included1 and included2: errors 1`] = `Array []`;

exports[`include option should match snapshot for multiple String values included1 and included2: warnings 1`] = `Array []`;
